[gd_scene load_steps=32 format=2]

[ext_resource path="res://EnemeyContainer/Basic_enemies/laser_dragon_beam.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/PngsFiles/mega-skele.png" type="Texture" id=2]
[ext_resource path="res://EnemeyContainer/Skele_type/skele_head.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 96.9478, 114.299 )

[sub_resource type="Animation" id=27]
resource_name = "Left_fire"
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -91.2596 ]
}

[sub_resource type="Animation" id=29]
resource_name = "Right_fire"
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.6958, -0.0341714 ]
}

[sub_resource type="Animation" id=30]
resource_name = "full_screen_fire_LtoR"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, 90.0 ]
}

[sub_resource type="Animation" id=31]
resource_name = "full_screen_fire_RtoL"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("../fire_breath:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, -90.0 ]
}

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("movement:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.20336, -9.91512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("movement:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=35]
resource_name = "movement"
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("movement:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -298.555, 0 ), Vector2( 0, 0 ), Vector2( 376.224, 0 ) ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/tooth_spawn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -233.519, -125.119 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.55717, -50.3234 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=44]
resource_name = "death"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.55717, -50.3234 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.368627, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=43]
resource_name = "half_time"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Head:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.223529, 0.215686, 0.215686, 0.603922 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "laser_beam"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60 ]
}

[sub_resource type="Animation" id=38]
resource_name = "left_eye_popped"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 20 ]
}

[sub_resource type="Animation" id=39]
resource_name = "left_head_thoughts_spawn"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 45, 34 ]
}

[sub_resource type="Animation" id=40]
resource_name = "open_mouth_teeth"
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 61, 62, 63, 64, 65, 66, 67, 68, 69, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/tooth_spawn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -233.519, -125.119 ), Vector2( -172.25, -55.9947 ), Vector2( -92.1279, -55.9947 ), Vector2( -1.00908, -55.9947 ), Vector2( 86.9677, -55.9947 ), Vector2( 171.802, -55.9947 ), Vector2( 233.072, -55.9947 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "right_eye_popped"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 27, 28, 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=42]
resource_name = "right_head_thoughts_spawn"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Idle"
length = 1.2
loop = true

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.55717, -50.3234 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Head:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Head/tooth_spawn:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -233.519, -125.119 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "laser_beam"

[sub_resource type="Animation" id=19]
resource_name = "left_eye_popped"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 34 ]
}

[sub_resource type="Animation" id=14]
resource_name = "left_head_thoughts_spawn"
length = 1.25
tracks/0/type = "value"
tracks/0/path = NodePath("../Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 34 ]
}

[sub_resource type="Animation" id=26]
resource_name = "open_mouth_teeth"
tracks/0/type = "value"
tracks/0/path = NodePath("../Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 61, 62, 63, 64, 65, 66, 67, 68 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Head/tooth_spawn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -233.519, -125.119 ), Vector2( -170.679, -62.2787 ), Vector2( -85.8438, -62.2787 ), Vector2( -1.00908, -62.2787 ), Vector2( 90.1097, -51.2816 ), Vector2( 90.1097, -51.2816 ), Vector2( 171.802, -57.5657 ), Vector2( 228.359, -74.8469 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "right_eye_popped"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=15]
resource_name = "right_head_thoughts_spawn"
length = 1.25
tracks/0/type = "value"
tracks/0/path = NodePath("../Head:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../thoughts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -116.778, -154.235 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../thoughts2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 116.778, -154.235 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "thoughts_left"
tracks/0/type = "value"
tracks/0/path = NodePath("../thoughts:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -116.778, -154.235 ), Vector2( -219.785, -173.515 ), Vector2( -246.225, -133.303 ), Vector2( -279.276, -88.685 ), Vector2( -311.224, 175.15 ), Vector2( -116.778, -154.235 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "thoughts_right"
tracks/0/type = "value"
tracks/0/path = NodePath("../thoughts2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 116.778, -154.235 ), Vector2( 219.785, -173.515 ), Vector2( 246.225, -133.303 ), Vector2( 279.276, -88.685 ), Vector2( 309, 175 ), Vector2( 116.778, -154.235 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D" groups=["boss_group"]]
scale = Vector2( 1.81541, 1.81541 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 561.0, -565.0, 682.0 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["boss_group"]]
position = Vector2( 1.10168, -33.8767 )
shape = SubResource( 33 )

[node name="movement" type="Position2D" parent="."]
position = Vector2( 2.20336, -9.91512 )

[node name="thoughts2" type="Position2D" parent="."]
position = Vector2( 116.778, -154.235 )
scale = Vector2( 0.350627, 0.350627 )

[node name="thoughts" type="Position2D" parent="."]
position = Vector2( -116.778, -154.235 )
scale = Vector2( 0.350627, 0.350627 )

[node name="eye" type="Position2D" parent="."]
position = Vector2( 53.942, 138.77 )

[node name="head_orginal_pos" type="Position2D" parent="."]

[node name="Head" type="Sprite" parent="."]
position = Vector2( 2.55717, -50.3234 )
scale = Vector2( 0.350627, 0.350627 )
texture = ExtResource( 2 )
hframes = 9
vframes = 8

[node name="tooth_spawn" type="Position2D" parent="Head"]
position = Vector2( -233.519, -125.119 )
scale = Vector2( 2.85203, 2.85203 )

[node name="axis" type="Position2D" parent="Head"]
position = Vector2( -9.42608, 397.465 )
scale = Vector2( 2.85203, 2.85203 )

[node name="laser" type="RayCast2D" parent="Head/axis" groups=["enemey_group"]]
position = Vector2( 1.10168, -83.7276 )
scale = Vector2( 0.769231, 0.769231 )
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 2
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="Head/axis/laser"]
modulate = Color( 0, 0.6, 1, 1 )
position = Vector2( 0.00432123, 27.0371 )
points = PoolVector2Array( -0.00432123, -27.0371, 0.00927584, 58.0371 )
width = 1.0
default_color = Color( 0, 0.6, 1, 1 )

[node name="end" type="Position2D" parent="Head/axis/laser"]
position = Vector2( -0.00111285, -6.96289 )
rotation = -0.000159826

[node name="Tween" type="Tween" parent="Head/axis/laser"]

[node name="Fire_breath_animation" type="AnimationPlayer" parent="Head/axis/laser"]
root_node = NodePath("../../Head_area")
anims/Left_fire = SubResource( 27 )
anims/RESET = SubResource( 28 )
anims/Right_fire = SubResource( 29 )
anims/full_screen_fire_LtoR = SubResource( 30 )
anims/full_screen_fire_RtoL = SubResource( 31 )

[node name="moving" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 34 )
anims/movement = SubResource( 35 )

[node name="ani_head" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 36 )
anims/death = SubResource( 44 )
anims/half_time = SubResource( 43 )
anims/laser_beam = SubResource( 37 )
anims/left_eye_popped = SubResource( 38 )
anims/left_head_thoughts_spawn = SubResource( 39 )
anims/open_mouth_teeth = SubResource( 40 )
anims/right_eye_popped = SubResource( 41 )
anims/right_head_thoughts_spawn = SubResource( 42 )

[node name="fake_ani_head" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/Idle = SubResource( 12 )
anims/RESET = SubResource( 13 )
anims/laser_beam = SubResource( 32 )
anims/left_eye_popped = SubResource( 19 )
anims/left_head_thoughts_spawn = SubResource( 14 )
anims/open_mouth_teeth = SubResource( 26 )
anims/right_eye_popped = SubResource( 20 )
anims/right_head_thoughts_spawn = SubResource( 15 )

[node name="ani_spawn" type="AnimationPlayer" parent="."]
root_node = NodePath("../fake_ani_head")
anims/RESET = SubResource( 16 )
anims/thoughts_left = SubResource( 17 )
anims/thoughts_right = SubResource( 18 )

[node name="ani_spawn_timer" type="Timer" parent="ani_spawn"]

[node name="gen_timer" type="Timer" parent="."]

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[connection signal="timeout" from="ani_spawn/ani_spawn_timer" to="." method="_on_ani_spawn_timer_timeout"]
[connection signal="timeout" from="gen_timer" to="." method="_on_gen_timer_timeout"]
